--- a/src/main/resources/brooklyn/campsite/config_data.json
+++ b/src/main/resources/brooklyn/campsite/config_data.json
@@ -5,7 +5,7 @@
         "connection" : {
             "host" : "${databaseHost}",
             "user" : "${databaseUser}",
-            "password" : "${databasePassword}"
+            "password" : "${databasePassword}",
             "database" : "campsite",
             "charset" : "UTF8MB4_GENERAL_CI"
         }
