--- a/src/main/resources/brooklyn/campsite/config_data.json
+++ b/src/main/resources/brooklyn/campsite/config_data.json
@@ -4,6 +4,7 @@
         "client" : "mysql",
         "connection" : {
             "host" : "${databaseHost}",
+            "port" : "${databasePort?c}",
             "user" : "${databaseUser}",
             "password" : "${databasePassword}",
             "database" : "campsite",
