--- a/src/main/assembly/files/blueprints/campsite-cluster.yaml
+++ b/src/main/assembly/files/blueprints/campsite-cluster.yaml
@@ -4,14 +4,16 @@ id: campsite
 name: "Campsite Application"
 origin: "http://github.com/borooklyncentral/campsite/"
 locations:
-- jclouds:aws-ec2:eu-west-1
+- jclouds:hpcloud-compute:
+    identity: tenantId:user
+    credential: password
 services:
-- serviceType: brooklyn.entity.database.MySqlNode
+- serviceType: brooklyn.entity.database.mysql.MySqlNode
   id: mysql
   name: "Database"
   brooklyn.config:
     creationScriptUrl: classpath://brooklyn/campsite/create-campsite-user.sql
-- serviceType: brooklyn.entity.messaging.RabbitBroker
+- serviceType: brooklyn.entity.messaging.rabbit.RabbitBroker
   id: rabbit
   name: "Queue"
 - serviceType: brooklyn.entity.webapp.ControlledDynamicWebAppCluster
@@ -19,36 +21,36 @@ services:
   name: "Campsite Cluster"
   brooklyn.config:
     initialSize: 2
-    proxy.http.port: "8000+"
+    proxy.http.port: "8080"
     memberSpec:
       $brooklyn:entitySpec:
-        type: brooklyn.campsite.CampsiteWebapp
-        name: "Campsite"
+        type: brooklyn.campsite.entity.CampsiteWebapp
         brooklyn.config:
           provisioningProperties:
             os64bit: true
             minRam: 7000
-          httpPort: "8080+"
+          httpPort: "80"
           objectStorage: AWSObjectStorage
           queueService: RabbitMQ
-          s3AccessKey: XXXX
-          s3SecretKey: XXXXXXXX
+          s3AccessKey: "XXXX"
+          s3SecretKey: "XXXXXXXX"
           s3BucketName: "campsite-public"
           sPrivateBucketName: "campsite-public"
-          databaseHost: component("mysql").attributeWhenReady("host.name")
-          databasePort: component("mysql").attributeWhenReady("mysql.port")
+          databaseHost: $brooklyn:component("mysql").attributeWhenReady("host.name")
+          databasePort: $brooklyn:component("mysql").attributeWhenReady("mysql.port")
           databaseUser: "campsite"
           databasePassword: "p4ssw0rd"
-          rabbitHost: component("rabbit").attributeWhenReady("host.name")
-          rabbitPort: component("rabbit").attributeWhenReady("amqp.port")
+          rabbitHost: $brooklyn:component("rabbit").attributeWhenReady("host.name")
+          rabbitPort: $brooklyn:component("rabbit").attributeWhenReady("amqp.port")
     controlleddynamicwebappcluster.controllerSpec:
       $brooklyn:entitySpec:
         type: brooklyn.entity.proxy.nginx.NginxController
-- serviceType: brooklyn.campsite.CampsiteApi
+- serviceType: brooklyn.campsite.entity.CampsiteApi
   id: api
   name: "API"
   brooklyn.config:
-    databaseHost: component("mysql").attributeWhenReady("host.name")
-    databasePort: component("mysql").attributeWhenReady("mysql.port")
+    campsite.webapp: $brooklyn:component("campsite-cluster")
+    databaseHost: $brooklyn:component("mysql").attributeWhenReady("host.name")
+    databasePort: $brooklyn:component("mysql").attributeWhenReady("mysql.port")
     databaseUser: "campsite"
     databasePassword: "p4ssw0rd"
