--- a/src/main/resources/brooklyn/campsite/parameters.ini
+++ b/src/main/resources/brooklyn/campsite/parameters.ini
@@ -29,7 +29,7 @@
     recaptcha.private_key   = ${driver.recaptchaPrivateKey}
 
     china_host_prefix = china
-    base_host         = campsite.local
+    base_host         = ${entity.siteDomainName}
     host_suffix       =
 
     s3.access_key           = ${driver.s3AccessKey}
@@ -51,7 +51,7 @@
     ; this is for the "alienware" staging
     facebook_app_id         = 468808186479620
 
-    mink_base_url           = http://campsite.local/app_test.php
+    mink_base_url           = http://${entity.siteDomainName}/app_test.php
 
     google_api_key          = YourGoogleApiKey
 
