--- a/src/main/assembly/files/blueprints/docker-campsite-cluster.yaml
+++ b/src/main/assembly/files/blueprints/docker-campsite-cluster.yaml
@@ -22,6 +22,7 @@ services:
         type: brooklyn.campsite.entity.CampsiteWebapp
         brooklyn.config:
           httpPort: 80
+          httpsPort: 443
           objectStorage: AWSObjectStorage
           queueService: AWS_SQS
           s3AccessKey: "XXXX"
