Configure email and add more template files

--- a/src/main/assembly/files/blueprints/campsite-cluster.yaml
+++ b/src/main/assembly/files/blueprints/campsite-cluster.yaml
@@ -33,6 +33,7 @@ services:
           httpsPort: 80
           objectStorage: AWSObjectStorage
           queueService: RabbitMQ
+          emailService: AWS_SES
           s3AccessKey: "XXXX"
           s3SecretKey: "XXXXXXXX"
           s3BucketName: "campsite-public"
