--- a/src/main/resources/brooklyn/campsite/parameters.ini
+++ b/src/main/resources/brooklyn/campsite/parameters.ini
@@ -57,8 +57,8 @@
 
     google_ua               = UA-9917033-2
 
-    memcached_server1_ip    = 127.0.0.1
-    memcached_server1_port  = 11211
+    memcached_server1_ip    = ${driver.memcachedHost}
+    memcached_server1_port  = ${driver.memcachedPort?c}
 
     ; Here we must have at least default
     liip_enabled_themes[] = default
@@ -84,8 +84,9 @@
     hpcloudUrl           = https://region-a.geo-1.objects.hpcloudsvc.com:443/v1/10873218563681/
     hpcloudMessagingUrl  = https://region-a.geo-1.messaging.hpcloudsvc.com/v1.1/10873218563681
     hpcloudContainer     = platformd-public
+
     ; For use SendGrid Email service use SendGrid and for Aws use AWS_SES
-    emailService         = SendGrid
+    emailService         = ${driver.emailService}
     sendgridUsername     = ${driver.sendgridUsername}
     sendgridPassword     = ${driver.sendgridPassword}
 
