--- a/src/main/resources/brooklyn/campsite/config_server.yml
+++ b/src/main/resources/brooklyn/campsite/config_server.yml
@@ -1,3 +1,4 @@
+[#ftl]
 # Used for server-specific information, e.g. to enable the symfony default login method:
 
 security:
@@ -16,4 +17,4 @@ jms_i18n_routing:
     locales: [en]
     strategy: custom
     hosts:
-        en: staging.marketingcamp.org
+        en: www.${entity.siteDomainName}
